feat(patch): added two feature flags, appSpecificSupportLink and appAuthorName, removed hardcoded text.

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -3730,7 +3730,9 @@
       "noResultsFound": "No results found",
       "noResultsDesc": "Please verify the spelling and try again",
       "versionNew": "(NEW{{newVersion}})",
-      "searchApps": "Search"
+      "searchApps": "Search",
+      "developedBy": "by",
+      "thirdParty": "3rd party"
     },
     "uninstall": {
       "title": "Uninstall",
