show message in account if pending transaction

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -3336,6 +3336,9 @@
   "scanning": {
     "loading": "Searching devices..."
   },
+  "editTx": {
+    "header": "Edit Transaction"
+  },
   "send": {
     "tooMuchUTXOBottomModal": {
       "cta": "Continue",
