--- a/apps/ledger-live-desktop/static/i18n/ko/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ko/app.json
@@ -102,6 +102,7 @@
     "addressCopied" : "주소 복사됨",
     "addressCopiedSuspicious" : "복사된 주소와 클립보드 주소가 일치하지 않습니다.",
     "experimentalFeature" : "실험",
+    "featureFlags" : "기능 플래그",
     "information" : "정보",
     "search" : "검색 중...",
     "searchWithoutEllipsis" : "검색",
@@ -131,7 +132,7 @@
     "nanoS" : "Nano S",
     "nanoSP" : "Nano S Plus",
     "nanoX" : "Nano X",
-    "nanoFTS" : "Nano FTS",
+    "stax" : "Stax",
     "blue" : "Blue"
   },
   "operation" : {
@@ -251,6 +252,8 @@
         "float" : "변동",
         "update" : "요율 업데이트 날짜",
         "loading" : "로딩 중...",
+        "loadingQuotes" : "지금 견적 로딩 중",
+        "loadingDescription" : "최선의 옵션을 찾는 데 잠시 시간이 소요될 것입니다.",
         "name" : {
           "title" : "공급자",
           "tooltip" : "제공업체에 따라 계정을 생성하여 회원가입을 해야 합니다."
@@ -1206,8 +1209,11 @@
         "checkDeviceButton" : "확인 절차를 다시 실행하세요",
         "cancelButton" : "다음에 결정하기"
       },
-      "genuineCheckAnimationModal" : {
-        "message" : "{{deviceName}}에서 관리자 허용"
+      "softwareCheckAllowSecureChannelModal" : {
+        "title" : "{{deviceName}}에서 관리자 허용"
+      },
+      "softwareCheckLockedDeviceModal" : {
+        "title" : "장치를 잠금 해제하세요"
       },
       "helpDrawer" : {
         "title" : "설정 안내와 관련하 도움이 필요하신가요?",
@@ -1231,16 +1237,16 @@
   },
   "postOnboarding" : {
     "postOnboardingScreen" : {
-      "title" : "좋습니다.\n설정이 모두 완료되었습니다.",
-      "description" : "축하합니다! {{deviceName}} 설정을 모두 완료하셨습니다.",
-      "paragraph" : "먼저 몇 가지 단계를 준비했습니다. Ledger Live를 직접 살펴보고 싶다면 주저 없이 이 단계를 건너뛰세요. 필요하다면 언제든지 다시 시작할 수 있습니다.",
-      "bottomText" : "Ledger Live와 함께 안전한 Web3 여행을 즐겨보세요."
+      "title" : "Next up, use your\nLedger Stax to... ",
+      "titleCompleted" : "and that's a\nwrap!"
     },
     "postOnboardingContent" : {
-      "title" : "좋습니다.\n설정이 모두 완료되었습니다.",
-      "description" : "다음 단계를 수행하세요.",
-      "skipLink" : "앱으로 건너뛰기",
-      "skipLinkInDrawer" : "나중에 할게요"
+      "skipLink" : "I'll do this later"
+    },
+    "postOnboardingBanner" : {
+      "title" : "What's next for your Ledger Stax?",
+      "description" : "Claim the Infinity NFT, customize it's lock screen, or\ntransfer your assets from other exchanges.",
+      "link" : "See what's next"
     }
   },
   "hideNftCollection" : {
@@ -1678,6 +1684,8 @@
       "undelegated" : "위임 해제됨",
       "undelegatedFrom" : "다음으로부터 위임 해제됨",
       "undelegatedAmount" : "위임 해제 금액",
+      "withdrawnFrom" : "출금 계좌",
+      "withdrawnAmount" : "출금된 금액",
       "rewardFrom" : "보상처",
       "memo" : "메모",
       "assetId" : "자산 ID",
@@ -1718,7 +1726,7 @@
     "swap" : {
       "notice" : {
         "default" : "장치에서 스왑 세부사항을 확인한 후 전송하세요. 주소가 안전하게 교환되어 주소를 따로 인증할 필요 없습니다.",
-        "cic" : "장치에서 자금 세부사항을 확인한 후 전송하세요. CIC는 일부 트랜잭션에 대해 추가 확인을 수행해야 하므로 지연이 발생할 수 있습니다."
+        "provider" : "장치에서 스왑 세부사항을 확인한 후 전송하세요. 일부 트랜잭션에서 {{providerName}}의 추가 확인 단계가 필요할 수 있어 지연이 발생할 수 있습니다."
       },
       "confirm" : "스왑 트랜잭션을 검증하세요",
       "amountSent" : "전송 금액",
@@ -2231,6 +2239,187 @@
     "value" : "가치",
     "header" : "계정 배분 ({{count}})"
   },
+  "elrond" : {
+    "summary" : {
+      "availableBalanceTooltip" : "이체 가능한 금액입니다.",
+      "availableBalance" : "이용 가능 잔액",
+      "delegatedAssetsTooltip" : "위임된 자산은 스테이킹 공급자가 컨센서스 메커니즘에 참여하여 검증인 노드를 운영하고 트랜잭션을 처리하며 네트워크를 보호하는 데 간접적으로 사용됩니다.",
+      "delegatedAssets" : "위임된 자산",
+      "undelegatingTooltip" : "위임되지 않은 자산은 10일 간의 본딩 해제 기간을 거쳐 출금할 수 있습니다.",
+      "undelegating" : "대기 중 출금 요청"
+    },
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "MultiversX 제공",
+        "moreInfo" : "자세한 정보",
+        "drawerTitle" : "MultiversX 통합",
+        "title" : "이제 Ledger Live에서 MultiversX eGold(EGLD) 토큰을 이용할 수 있습니다.",
+        "description" : "이제 Ledger Live로 eGold(EGLD) 토큰을 안전하게 보관하고 관리할 수 있습니다.",
+        "description2" : "MultiversX eGold(EGLD) 토큰은 MultiversX 네트워크의 네이티브 토큰으로, 트랜잭션, 스테이킹, 스마트 계약, 거버넌스, 검증인 보상 등 모든 분야에 사용됩니다.",
+        "description3" : "본사는 스테이킹, 네이티브 ESDT(엘론드 스탠다드 디지털 토큰) 지원 등의 다양한 기능을 추가하기 위해 MultiversX 팀과 활발히 협업 중입니다.",
+        "website" : "인터넷 스케일 블록체인"
+      }
+    },
+    "delegation" : {
+      "emptyState" : {
+        "description" : "EGLD를 위임하여 네트워크를 보호하고 본인 몫의 보상을 확보하세요.",
+        "info" : "위임이란 무엇인가요?",
+        "delegation" : "보상 받기"
+      },
+      "commission" : "커미션",
+      "claimRewards" : "보상 수령",
+      "header" : "위임",
+      "noRewards" : "이용 가능한 보상이 없습니다",
+      "delegate" : "위임하기",
+      "undelegate" : "위임 해제",
+      "redelegateDisabledTooltip" : "<0>{{days}}</0>에 재위임할 수 있습니다",
+      "redelegateMaxDisabledTooltip" : "한 번에 <0>7</0>명 이상의 검증인을 재위임할 수 없습니다",
+      "undelegateDisabledTooltip" : "한 번에 <0>7</0>명 이상의 검증인을 위임 해제할 수 없습니다",
+      "reward" : "보상 수령",
+      "currentDelegation" : "위임됨: <0>{{amount}}</0>",
+      "apr" : "연이율(APR)",
+      "totalStake" : "총 스테이킹",
+      "activeTooltip" : "위임된 금액이 보상을 생성합니다",
+      "inactiveTooltip" : "위임되지 않은 금액은 보상을 생성하지 않습니다",
+      "minSafeWarning" : "자금이 부족합니다 1 EGLD 이상을 보유하고 있어야 합니다.",
+      "flow" : {
+        "title" : "위임하기",
+        "steps" : {
+          "amount" : {
+            "title" : "위임하기",
+            "subtitle" : "다음 스테이킹 공급자 중 하나를 선택하여 자산을 스테이킹하세요.",
+            "warning" : "스테이킹 공급자를 현명하게 선택하세요. 현재 유일한 위험 요소는 다양한 사유로 보상을 받지 못하는 상황이 발생하는 것입니다. 따라서, 공급자는 신뢰성, 커뮤니케이션 및 경제성을 기준으로 선택해야 합니다.",
+            "fields" : {
+              "validator" : "스테이킹 공급자"
+            }
+          },
+          "fields" : {
+            "amount" : "스테이킹할 금액"
+          },
+          "starter" : {
+            "description" : "EGLD 자산을 스테이킹 공급자에게 위임하여 보상을 받을 수 있습니다.",
+            "bullet" : ["위임된 자산의 소유권은 귀하가 갖습니다", "Ledger 장치를 이용하여 위임하세요", "자산은 위임 해제 10일 후에 이용 가능합니다"],
+            "warning" : {
+              "description" : "스테이킹 공급자를 현명하게 선택하세요. 현재 유일한 위험 요소는 다양한 사유로 보상을 받지 못하는 상황이 발생하는 것입니다. 따라서, 공급자는 신뢰성, 커뮤니케이션 및 경제성을 기준으로 선택해야 합니다."
+            }
+          },
+          "validator" : {
+            "title" : "스테이킹 공급자"
+          },
+          "connectDevice" : {
+            "title" : "장치"
+          },
+          "confirmation" : {
+            "title" : "확인",
+            "success" : {
+              "title" : "자산을 성공적으로 위임했습니다",
+              "text" : "블록체인이 트랜잭션 검증을 완료하면 계정 잔액이 업데이트됩니다.",
+              "cta" : "세부사항 보기"
+            },
+            "broadcastError" : "트랜잭션이 실패한 것 같습니다. 잠시 기다려 트랜잭션 내역을 확인한 후 다시 시도하세요."
+          }
+        }
+      }
+    },
+    "claimRewards" : {
+      "flow" : {
+        "title" : "보상 수령",
+        "steps" : {
+          "claimRewards" : {
+            "title" : "보상",
+            "compound" : "복리 보상",
+            "claim" : "보상 수령",
+            "compoundOrClaim" : "복리 보상 또는 보상 수령",
+            "compoundDescription" : "위임된 금액에 보상이 추가됩니다",
+            "claimDescription" : "보상이 이용 가능 잔액에 추가됩니다",
+            "compoundInfo" : "<0>{{amount}}</0>의 보상을 획득했습니다. '계속'을 클릭하면, 바로 보상을 수령하고 동일한 스테이킹 공급자에게 자동 위임합니다.",
+            "claimInfo" : "아래 스테이킹 공급자로부터 <0>{{amount}}</0>의 보상을 획득했습니다. '계속'을 클릭하면, 바로 보상을 수령하고 이용 가능 잔액에 자동 추가됩니다.",
+            "selectLabel" : "위임 선택"
+          },
+          "connectDevice" : {
+            "title" : "장치"
+          },
+          "confirmation" : {
+            "title" : "확인",
+            "label" : "확인",
+            "success" : {
+              "title" : "보상 수령이 성공적으로 처리되었습니다",
+              "titleCompound" : "성공적으로 보상에 복리를 적용했습니다.",
+              "text" : "보상이 이용 가능 잔액에 추가되었습니다.",
+              "textCompound" : "<0>{{validator}}</0>에 대한 <0>{{amount}}</0>의 복리 보상 트랜잭션이 성공적으로 처리되었습니다.",
+              "cta" : "세부사항 보기"
+            },
+            "pending" : {
+              "title" : "트랜잭션 브로드캐스팅 중..."
+            },
+            "broadcastError" : "트랜잭션이 실패한 것 같습니다. 잠시 기다려 트랜잭션 내역을 확인한 후 다시 시도하세요."
+          }
+        }
+      }
+    },
+    "undelegation" : {
+      "header" : "위임 해제",
+      "headerTooltip" : "10일의 언본딩 기간이 지난 후 이용 가능합니다.",
+      "inactiveTooltip" : "위임되지 않은 금액은 보상을 생성하지 않습니다",
+      "withdraw" : {
+        "cta" : "출금 완료"
+      },
+      "flow" : {
+        "title" : "위임 해제 자산",
+        "steps" : {
+          "amount" : {
+            "title" : "금액",
+            "subtitle" : "위임 해제 절차 완료까지 <0>10일</0>이 소요됩니다.",
+            "warning" : "보상은 자동으로 수령됩니다. 위임 해제는 2단계 과정으로, 위임 해제 요청 후 <0>10일 간의 본딩 해제 기간</0>을 거쳐 출금을 완료할 수 있으며 위임되지 않은 금액은 이용 가능 잔액으로 이체됩니다.",
+            "fields" : {
+              "validator" : "스테이킹 공급자",
+              "amount" : "위임 해제 금액"
+            }
+          },
+          "device" : {
+            "title" : "장치"
+          },
+          "confirmation" : {
+            "title" : "확인",
+            "success" : {
+              "title" : "귀하의 자산을 성공적으로 위임 해제했습니다.",
+              "description" : "<0>{{amount}}</0>가 <0>{{validator}}</0>로부터 위임 해제되었습니다",
+              "cta" : "세부사항 보기"
+            },
+            "broadcastError" : "트랜잭션이 실패한 것 같습니다. 잠시 기다려 트랜잭션 내역을 확인한 후 다시 시도하세요."
+          }
+        }
+      }
+    },
+    "withdraw" : {
+      "flow" : {
+        "title" : "출금 완료",
+        "steps" : {
+          "withdraw" : {
+            "title" : "출금 완료",
+            "description" : "<0>{{amount}}</0>의 EGLD를 <0>{{validator}}</0>로부터 위임 해제하셨습니다. '계속'을 클릭하면, 바로 출금되어 이용 가능 잔액에 자동으로 다시 추가됩니다.",
+            "selectLabel" : "위임 해제 선택"
+          },
+          "connectDevice" : {
+            "title" : "장치"
+          },
+          "confirmation" : {
+            "title" : "확인",
+            "label" : "확인",
+            "success" : {
+              "title" : "자금을 성공적으로 출금하였습니다",
+              "text" : "<0>{{amount}}</0>의 금액을 귀하의 계정 잔액에 다시 추가하였습니다.",
+              "cta" : "세부사항 보기"
+            },
+            "pending" : {
+              "title" : "트랜잭션 브로드캐스팅 중..."
+            },
+            "broadcastError" : "트랜잭션이 실패한 것 같습니다. 잠시 기다려 트랜잭션 내역을 확인한 후 다시 시도하세요."
+          }
+        }
+      }
+    }
+  },
   "cardano" : {
     "account" : {
       "stakingRewardsBanner" : {
@@ -2312,6 +2501,15 @@
             }
           }
         }
+      }
+    }
+  },
+  "tezos" : {
+    "objkt" : {
+      "card" : {
+        "title" : "NFT(대체 불가능 토큰) 컬렉션",
+        "description" : "Ledger Live 내부의 Objkt를 통해 테조스 NFT를 직접 확인할 수 있습니다.",
+        "cta" : "Objkt에서 내 NFT 보기"
       }
     }
   },
@@ -3689,8 +3887,10 @@
       "debugAppsDesc" : "디버그 태그된 플랫폼 앱 열기를 표시하고 허용하세요.",
       "experimentalApps" : "실험적 앱 허용",
       "experimentalAppsDesc" : "실험적이라 태그 된 플랫폼 앱을 표시하고 허용하세요.",
-      "catalogServer" : "카탈로그 공급자 설정",
-      "catalogServerDesc" : "다중 플랫폼 앱 소스 간 전환",
+      "catalogUrl" : "카탈로그 앱 공급자 설정",
+      "catalogUrlDesc" : "사용자 지정 카탈로그 제공자 URL를 입력하세요",
+      "catalogRampServer" : "구매 / 매도 공급자 설정",
+      "catalogRampServerDesc" : "다중 거래 공급자 간 전환",
       "enablePlatformDevTools" : "플랫폼 개발자 도구 사용",
       "enablePlatformDevToolsDesc" : "개방형 플랫폼 앱 개발자 도구 창 사용",
       "featureFlagsTitle" : "Ledger Live에서 사용되는 정의된 기능 플래그",
@@ -3698,6 +3898,9 @@
       "featureFlagsEdit" : "편집",
       "featureFlagsRestore" : "복구",
       "featureFlagsOverride" : "재정의",
+      "featureFlagsRestoreAll" : "모든 플래그 값 복원",
+      "showButtonDesc" : "사이드바에 항상 기능 플래그 버튼 표시",
+      "buttonTitle" : "플래그가 로컬로 재정의되었습니다",
       "firebaseProject" : "이 빌드에서 대상으로 하는 Firebase 프로젝트:",
       "addLocalApp" : "로컬 앱 추가",
       "addLocalAppDesc" : "로컬 매니페스트 기능으로 로컬 파일을 둘러보고 로컬 앱 추가하기",
@@ -3752,6 +3955,10 @@
         "experimentalCurrencies" : {
           "title" : "실험 통합",
           "description" : "사용 가능한 실험 암호화폐 통합을 사용합니다."
+        },
+        "experimentalExecutionOnRenderer" : {
+          "title" : "실험 네트워킹",
+          "description" : "실험 네트워킹을 통해 VPN으로 Ledger Live 경험을 최적화하세요. 현재 사용 중인 VPN이 시스템 오류를 일으키는 경우에만 활성화하세요."
         },
         "experimentalLanguages" : {
           "title" : "번역 테스팅",
@@ -4994,6 +5201,23 @@
       "title" : "죄송하지만 발견된 계정이 없습니다",
       "description" : "주소 계산에 문제가 발생했습니다. 재시도하거나 Ledger 지원 부서에 연락하세요"
     },
+    "ElrondDecimalsLimitReached" : {
+      "title" : "최대 소수점 제한에 도달했습니다.",
+      "description" : "제공된 금액이 소수점 이하 18자리인지 확인하세요."
+    },
+    "ElrondMinDelegatedAmountError" : {
+      "title" : "위임된 금액은 {{formattedAmount}} 이상이어야 합니다"
+    },
+    "ElrondMinUndelegatedAmountError" : {
+      "title" : "위임되지 않은 금액은 {{formattedAmount}} 이상이어야 합니다"
+    },
+    "ElrondDelegationBelowMinimumError" : {
+      "title" : "남은 위임은 {{formattedAmount}}보다 작을 수 없습니다"
+    },
+    "NotEnoughEGLDForFees" : {
+      "title" : "트랜잭션 수수료로 지불할 EGLD가 충분하지 않습니다.",
+      "description" : "계정에 EGLD를 전송하여 트랜잭션 수수료를 지불하세요."
+    },
     "NotEnoughBalance" : {
       "title" : "죄송하지만 자금이 부족합니다",
       "description" : "계정에 자금이 충분한지 확인해 주세요."
@@ -5493,6 +5717,14 @@
       "title" : "장치가 잠금 상태입니다",
       "description" : "장치의 잠금을 해제하고 다시 시도하세요.",
       "descriptionWithProductName" : "{{ productName }}의 잠금을 해제하고 다시 시도하세요."
+    },
+    "DeviceNotOnboardedError" : {
+      "title" : "귀하의 장치가 아직 사용될 준비가 되지 않았습니다",
+      "titleWithProductName" : "{{ productName }} 장치는 아직 사용 준비가 되지 않았습니다.",
+      "description" : "먼저 장치 설정이 필요합니다.\n설정 절차를 안내해드리겠습니다.",
+      "descriptionWithProductName" : "먼저 {{ productName }} 장치 설정이 필요합니다.\n설정 절차를 안내해드리겠습니다.",
+      "goToOnboardingButton" : "내 장치 설정",
+      "goToOnboardingButtonWithProductName" : "내 {{ productName }} 설정"
     }
   },
   "cryptoOrg" : {
@@ -5525,7 +5757,7 @@
     }
   },
   "customImage" : {
-    "title" : "맞춤 이미지",
+    "title" : "Custom lock screen",
     "steps" : {
       "choose" : {
         "stepLabel" : "이미지 선택",
@@ -5543,22 +5775,19 @@
       "transfer" : {
         "stepLabel" : "전송",
         "uploadAnotherImage" : "다른 이미지 업로드",
-        "allowPreview" : "{{productName}}에서 사진 미리보기 허용",
-        "loadingPicture" : "{{productName}}에서 사진 로드 중",
-        "pictureLoaded" : "사진 로드 완료",
+        "allowPreview" : "Allow lock screen picture to load on your {{productName}}",
+        "loadingPicture" : "Loading...",
         "imageLoaded" : "{{productName}}에서 로드한 이미지",
-        "confirmPicture" : "{{productName}}에서 확인",
-        "doThisLater" : "다음에 결정하기",
-        "timeDisclaimer" : "최대 30초가 소요될 수 있습니다"
+        "confirmPicture" : "Like what you see?\nKeep it!",
+        "doThisLater" : "다음에 결정하기"
       }
     },
     "postOnboarding" : {
       "title" : "내 장치 커스텀",
       "description" : "화면 커스텀을 통해",
-      "actionCompletedPopupLabel" : "장치 커스텀 완료",
-      "actionCompletedHubTitle" : "더욱 깔끔한 화면을 즐길 수 있습니다."
+      "actionCompletedPopupLabel" : "장치 커스텀 완료"
     },
-    "customImageSet" : "맞춤 이미지 세트",
+    "customImageSet" : "Lockscreen set",
     "finishCTA" : "완료"
   }
 }
