--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -518,7 +518,7 @@
       "title" : "Сумма для заморозки должна быть не меньше 1"
     },
     "TronSendTrc20ToNewAccountForbidden" : {
-      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес начала нужно отправить не менее 0,1 TRX.",
+      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес сначала нужно отправить минимум 0,1 TRX.",
       "description" : "Для активации сначала отправьте TRX или TRC-10 на счёт, после чего вы сможете получать TRC-20."
     },
     "TronUnexpectedFees" : {
@@ -803,7 +803,9 @@
     "required" : "Похоже, Bluetooth отключён",
     "locationRequiredTitle" : "Для Bluetooth LE необходимо включить функцию геолокации",
     "locationRequiredMessage" : "Для вывода списка устройств Bluetooth LE на Android-устройствах потребуется разрешить функцию геолокации.",
-    "checkEnabled" : "Пожалуйста, включите Bluetooth в настройках телефона."
+    "checkEnabled" : "Пожалуйста, включите Bluetooth в настройках телефона.",
+    "tryEnablingAgain" : "Попробуйте снова включить Bluetooth",
+    "openSettings" : "Открыть настройки Bluetooth"
   },
   "webview" : {
     "noConnectionError" : {
@@ -813,12 +815,10 @@
   },
   "location" : {
     "titleServiceRequired" : "Требуется функция геолокации",
-    "titlePermissionRequired" : "Требуется использование геолокации",
-    "titlePermissionRequiredPrecise" : "Требуется использование точной геолокации",
     "descriptionServiceRequired" : "Для подключения устройства через Bluetooth Ledger Live требуется функция геолокации.",
-    "descriptionPermissionRequired" : "Для подключения устройства через Bluetooth Ledger Live требуется разрешение на использование геолокации.",
-    "descriptionPermissionRequiredPrecise" : "Для подключения устройства через Bluetooth Ledger Live требуется разрешение на использование точной геолокации.",
     "open" : "Открыть настройки геолокации",
+    "openSettings" : "Открыть настройки геолокации",
+    "tryEnablingAgain" : "Попробуйте снова включить геолокацию",
     "noInfos" : "Ledger не имеет доступа к информации о вашем местоположении."
   },
   "permissions" : {
@@ -831,6 +831,19 @@
       "modalButtonLabelBase" : "Разрешить",
       "modalButtonLabelSettingsVariant" : "Перейти в Настройки",
       "dontPair" : "Не подключать"
+    },
+    "location" : {
+      "titlePermissionRequired" : "Требуется использование геолокации",
+      "titlePermissionRequiredPrecise" : "Требуется использование точной геолокации",
+      "descriptionPermissionRequired" : "Для подключения устройства через Bluetooth Ledger Live требуется разрешение на использование геолокации.",
+      "descriptionPermissionRequiredPrecise" : "Для подключения устройства через Bluetooth Ledger Live требуется разрешение на использование точной геолокации."
+    },
+    "camera" : {
+      "title" : "Разрешите доступ к камере",
+      "authorizeDescription" : "Чтобы сканировать QR-коды, пожалуйста, разрешите доступ к камере.",
+      "authorizeButtonTitle" : "Разрешить",
+      "goToSettingsDescription" : "Чтобы сканировать QR-коды, пожалуйста, разрешите доступ к камере в Настройках.",
+      "goToSettingsButtonTitle" : "Перейти в Настройки"
     }
   },
   "fees" : {
@@ -1115,6 +1128,12 @@
     "mostPopular" : "Самые популярные"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "Установить те же приложения, что и на устройстве {{deviceName}}?",
+      "titleNoDeviceName" : "Установить те же приложения, что и на предыдущем устройстве Ledger?",
+      "installCTA" : "Установить",
+      "skipCTA" : "Отложить"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} мин.",
       "title" : "{{ productName }} использует приложения для безопасных блокчейн-транзакций",
@@ -1126,7 +1145,7 @@
       "loading" : "Загружаем...",
       "resolving" : "Устраняем зависимости приложения...",
       "progress" : "Установка приложений: {{progress}}%",
-      "disclaimer" : "Приложения в {{ productName }} нужны для подтверждения транзакций. Добавить или удалить их можно в любое время."
+      "disclaimer" : "Добавляйте или удаляйте приложения в любое время с помощью Ledger Live."
     }
   },
   "onboarding" : {
@@ -2272,12 +2291,6 @@
         "unsupported" : "Не поддерживается",
         "settings" : "Настройки приложения",
         "includeGeneralSettings" : "Импорт настроек настольного приложения"
-      },
-      "fallback" : {
-        "header" : "Импорт счетов",
-        "title" : "Доступ к камере",
-        "desc" : "Чтобы сканировать QR-коды, пожалуйста, включите камеру в Настройках",
-        "buttonTitle" : "Перейти в Настройки"
       }
     },
     "availableBalance" : "Доступно",
@@ -3622,7 +3635,7 @@
       "title" : "Подтвердите обмен на устройстве",
       "alert" : {
         "default" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки.",
-        "cic" : "Перед отправкой проверьте детали обмена на устройстве. CIC может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
+        "provider" : "Перед отправкой проверьте детали обмена на устройстве. {{providerName}} может дополнительно проверять некоторые транзакции, что приведёт к задержкам."
       },
       "acceptTerms" : "Подтверждая эту транзакцию, я принимаю\n<0>условия использования <0>{{provider}}</0></0>",
       "notice" : "Перед отправкой проверьте сведения об обмене на устройстве. Обмен адресами осуществляется безопасно и не требует проверки."
