--- a/apps/ledger-live-mobile/src/locales/fr/common.json
+++ b/apps/ledger-live-mobile/src/locales/fr/common.json
@@ -803,7 +803,9 @@
     "required" : "Le Bluetooth semble être désactivé.",
     "locationRequiredTitle" : "La localisation est requise pour le Bluetooth LE.",
     "locationRequiredMessage" : "Sur Android, il faut autoriser l’accès à la localisation pour afficher les appareils en Bluetooth LE.",
-    "checkEnabled" : "Merci d’activer le Bluetooth dans les Paramètres de votre téléphone."
+    "checkEnabled" : "Merci d’activer le Bluetooth dans les Paramètres de votre téléphone.",
+    "tryEnablingAgain" : "Réessayez d’activer le Bluetooth",
+    "openSettings" : "Ouvrir les Paramètres Bluetooth"
   },
   "webview" : {
     "noConnectionError" : {
@@ -813,12 +815,10 @@
   },
   "location" : {
     "titleServiceRequired" : "Localisation requise",
-    "titlePermissionRequired" : "Accès à la localisation requis",
-    "titlePermissionRequiredPrecise" : "Accès à la localisation précise requis",
     "descriptionServiceRequired" : "Ledger Live a besoin des services de localisation pour coupler votre appareil en Bluetooth.",
-    "descriptionPermissionRequired" : "Ledger Live a besoin de l’autorisation d’accéder à la position pour coupler votre appareil via Bluetooth.",
-    "descriptionPermissionRequiredPrecise" : "Ledger Live a besoin de l’autorisation d’accéder à la position précise pour coupler votre appareil via Bluetooth.",
     "open" : "Ouvrir les paramètres de localisation",
+    "openSettings" : "Ouvrir les paramètres de localisation",
+    "tryEnablingAgain" : "Réessayez d’autoriser la localisation",
     "noInfos" : "Ledger n’utilise pas vos données de localisation."
   },
   "permissions" : {
@@ -831,6 +831,19 @@
       "modalButtonLabelBase" : "Autoriser",
       "modalButtonLabelSettingsVariant" : "Accéder aux Paramètres",
       "dontPair" : "Ne pas coupler"
+    },
+    "location" : {
+      "titlePermissionRequired" : "Accès à la localisation requis",
+      "titlePermissionRequiredPrecise" : "Accès à la localisation précise requis",
+      "descriptionPermissionRequired" : "Ledger Live a besoin de l’autorisation d’accéder à la position pour coupler votre appareil via Bluetooth.",
+      "descriptionPermissionRequiredPrecise" : "Ledger Live a besoin de l’autorisation d’accéder à la position précise pour coupler votre appareil via Bluetooth."
+    },
+    "camera" : {
+      "title" : "Autoriser l’appareil photo",
+      "authorizeDescription" : "Veuillez autoriser l’appareil photo à scanner les codes QR.",
+      "authorizeButtonTitle" : "Autoriser",
+      "goToSettingsDescription" : "Autorisez l’utilisation de l’appareil photo dans les Paramètres pour scanner les codes QR.",
+      "goToSettingsButtonTitle" : "Accéder aux Paramètres"
     }
   },
   "fees" : {
@@ -1115,6 +1128,12 @@
     "mostPopular" : "Plus populaire"
   },
   "installSetOfApps" : {
+    "restore" : {
+      "title" : "Installer les mêmes apps que sur {{deviceName}} ?",
+      "titleNoDeviceName" : "Installer les mêmes apps que sur votre Ledger précédent ?",
+      "installCTA" : "Installer maintenant",
+      "skipCTA" : "Plus tard"
+    },
     "landing" : {
       "estimatedTime" : "{{ minutes }} min",
       "title" : "Les apps de votre {{ productName }} vous permettent d’effectuer des transactions sécurisées.",
@@ -1126,7 +1145,7 @@
       "loading" : "Chargement...",
       "resolving" : "Installation des apps requises",
       "progress" : "Installation des apps : {{progress}} %",
-      "disclaimer" : "Les apps sur votre {{ productName }} vous permettent de valider vos opérations. Vous pouvez les ajouter ou supprimer à tout moment."
+      "disclaimer" : "Ajoutez ou supprimez des apps à tout moment depuis Ledger Live."
     }
   },
   "onboarding" : {
@@ -2272,12 +2291,6 @@
         "unsupported" : "Non pris en charge",
         "settings" : "Paramètres de l’app",
         "includeGeneralSettings" : "Importer les paramètres de Ledger Live pour l’ordinateur"
-      },
-      "fallback" : {
-        "header" : "Importer le compte",
-        "title" : "Autoriser l’appareil photo",
-        "desc" : "Autorisez l’utilisation de l’appareil photo dans les Paramètres pour scanner les codes QR.",
-        "buttonTitle" : "Accéder aux Paramètres"
       }
     },
     "availableBalance" : "Solde disponible",
@@ -2354,14 +2367,14 @@
       "algorand" : {
         "showTokens" : "Afficher {{length}} ASA",
         "showTokens_plural" : "Afficher {{length}} ASA",
-        "hideTokens" : "Cacher l’ASA",
-        "hideTokens_plural" : "Cacher l’ASA"
+        "hideTokens" : "Masquer l’ASA",
+        "hideTokens_plural" : "Masquer l’ASA"
       },
       "stellar" : {
         "showTokens" : "Afficher {{length}} actif",
         "showTokens_plural" : "Afficher {{length}} actifs",
-        "hideTokens" : "Cacher l’actif",
-        "hideTokens_plural" : "Cacher les actifs"
+        "hideTokens" : "Masquer l’actif",
+        "hideTokens_plural" : "Masquer les actifs"
       }
     },
     "noResultsFound" : "Aucun actif trouvé",
@@ -2493,11 +2506,11 @@
         "desc" : "Vous vous apprêtez à cacher tous vos comptes <1><0>{tokenName}</0></1>. Vous pouvez restaurer leur visibilité à tout moment dans <3>Paramètres > Comptes</3>.",
         "confirm" : "Masquer le token"
       },
-      "hideNFTCollectionCTA" : "Cacher la collection",
-      "hiddenNFTCollections" : "Collections de NFT cachées",
-      "hiddenNFTCollectionsDesc" : "Pour cacher des NFT, accédez au compte correspondant, faites un appui long sur la collection et choisissez Cacher la collection.",
+      "hideNFTCollectionCTA" : "Masquer la collection",
+      "hiddenNFTCollections" : "Collections de NFT masquées",
+      "hiddenNFTCollectionsDesc" : "Pour cacher des NFT, accédez au compte correspondant, faites un appui long sur la collection et choisissez Masquer la collection.",
       "hideNFTCollectionModal" : {
-        "title" : "Cacher cette collection ?",
+        "title" : "Masquer cette collection ?",
         "desc" : "Vous pouvez restaurer la visibilité de cette collection à tout moment à partir des Paramètres."
       },
       "cryptoAssets" : {
@@ -3622,7 +3635,7 @@
       "title" : "Confirmer l’opération de swap sur l’appareil",
       "alert" : {
         "default" : "Vérifiez les détails de l’échange sur votre appareil avant de l’envoyer. Les adresses sont échangées de manière sécurisée afin que vous n’ayez pas à les vérifier.",
-        "cic" : "Vérifiez les détails de l’échange sur votre appareil avant de l’envoyer. Une vérification supplémentaire peut être effectuée par CIC pour certains transactions, entraînant un temps d’attente."
+        "provider" : "Vérifiez les détails de l’échange sur votre appareil avant de l’envoyer. Une vérification supplémentaire peut être effectuée par {{providerName}} pour certaines transactions, entraînant un temps d’attente."
       },
       "acceptTerms" : "En validant cette transaction, j’accepte\n<0>les Conditions d’utilisation de <0>{{provider}}</0></0>.",
       "notice" : "Vérifiez les détails de l’échange sur votre appareil avant de l’envoyer. Les adresses sont échangées de manière sécurisée afin que vous n’ayez pas à les vérifier."
@@ -3725,7 +3738,7 @@
       "action" : "Continuer"
     },
     "Pairing" : {
-      "step1" : "Validez si le code affiché sur votre téléphone est identique à celui qui apparaît sur votre {{productName}}.",
+      "step1" : "Vérifiez si le code affiché sur votre téléphone est identique à celui qui apparaît sur votre {{productName}}.",
       "step2" : "Validez sur votre {{productName}} en appuyant sur les deux boutons simultanément.",
       "title1" : "Vérifiez que les codes sont identiques",
       "title2" : "Valider"
@@ -5626,7 +5639,7 @@
     "viewerModal" : {
       "viewOn" : "Voir sur",
       "viewInExplorer" : "Dans l’explorateur",
-      "hide" : "Cacher la collection de NFT",
+      "hide" : "Masquer la collection de NFT",
       "txDetails" : "Détails de la transaction"
     },
     "modalDisabled" : {
@@ -5773,9 +5786,9 @@
         "info" : "J’aimerais en savoir plus"
       },
       "hideNftModal" : {
-        "title" : "Cacher la collection de NFT",
+        "title" : "Masquer la collection de NFT",
         "desc" : "Cela cachera tous les NFT de {{collectionName}}. Vous pouvez restaurer leur visibilité depuis les Paramètres de Ledger Live.",
-        "cta" : "Cacher ce NFT"
+        "cta" : "Masquer ce NFT"
       },
       "media" : {
         "tag" : "{{count}} NFT"
